# himawari

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  compiled-server.nodemon.json  docker-compose.yml  example.env  make-dev-cert.bash  ormconfig.js  package.json  server.nodemon.json  tsconfig.json  webpack.config.server.js
.github/workflows/: shiftleft-analysis.yml
frontend/: package.json
frontend/src/: errors.ts
frontend/src/components/: App.tsx  AuthContext.tsx  Header.tsx  Home.tsx  Login.tsx  NoMatch.tsx
frontend/src/model/: users.ts
himawari/: Cargo.toml  docker-compose.yml  example.env
himawari-client/: Cargo.toml  Makefile  package.json  tsconfig.json
himawari-client/public/: index.html
himawari-client/src/client/components/: Login.tsx
himawari-client/src/client/model/: users.ts
himawari-client/src/components/: Login.tsx
himawari-client/src/model/: users.ts
himawari-client/static/: index.html
himawari-model/: Cargo.toml  package.json  tsconfig.json
himawari-model/src/: errors.ts  httpErrors.ts  lib.rs  users.rs
himawari-server/: Cargo.toml
himawari/migrations/: 20210612014346_create_users_table.down.sql  20210612014346_create_users_table.sql  20210612014346_create_users_table.up.sql  20210614070055_create_contests_meta.down.sql  20210614070055_create_contests_meta.up.sql  20210624050704_access_control.down.sql  20210624050704_access_control.up.sql
himawari/src/: about.rs  api.rs  db.rs  http.rs  logging.rs  main.rs  recaptcha.rs  secure.rs
himawari/src/model/: contests.rs  mod.rs  users.rs
himawari/src/routes/: auth.rs  contests.rs  debug.rs  mod.rs
migrations/: 20210514232736_init.sql
nginx-templates/: default.conf.template
public/: Register.css  docs.html  global.css  index.html  manifest.json  oas3.yaml
resources/: oas3.yaml
src/: db.rs  frontend.rs  index.tsx  jwt.rs  main.rs
src/api/: csp.rs  login.rs  mod.rs
src/client/: httpError.ts
src/client/components/: AlertContext.tsx  App.tsx  AuthContext.tsx  AuthRoute.tsx  ConditionalWrapper.tsx  ContestDeletionModal.tsx  ContestInfoCard.tsx  Contests.tsx  Header.tsx  LoadingSpinner.tsx  Login.css  Login.tsx  Logout.tsx  Paginator.tsx  Privacy.tsx  Profile.tsx  Register.tsx
src/client/model/: users.ts
src/model/: contests.ts  errors.ts  httpErrors.ts  index.ts  mod.rs  old_users.ts  users.rs  users.ts  validation.ts
src/server/: api.ts  app.ts  auth.ts  db.ts  index.ts  jwt.ts  log.ts  recaptchav2.ts  recaptchav3.ts  tsconfig.json
src/server/model/: users.ts  validator.ts
src/server/model/entities/: contests.ts  users.ts
src/server/model/migrations/: 1-users.ts  1621747462347-InitUsers.ts  1621753068278-InitUsers.ts  1623225915473-InitContests.ts
