[package]
name = "himawari"
version = "0.1.0"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }
tracing = "0.1"
rand = "0.8"
tokio = { version = "1", features = ["full", "parking_lot", "sync"] }
actix-web = { version = "4.0.0-beta.5", features = ["rustls", "secure-cookies"] }
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-rt = "2.2.0"
actix-identity = "0.4.0-beta.1"
anyhow = "1.0.40"
dotenv = "0.15"
rustls = "0.18"
better-panic = "0.2"
clap = "2"
tracing-log = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["parking_lot"] }
serde = { version = "1", features = ["derive"] }
argonautica = { version = "0.2", features = ["simd"] }
once_cell = "1.7"
born = "0.0.1"
itertools = "0.10"
chrono = { version = "0.4", features = ["serde"] }
include_dir = "0.6"
mime_guess = "2.0"
thiserror = "1.0"
shrinkwraprs = "0.3"