[package]
name = "himawari"
version = "0.1.0"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features= ["json"]}
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
serde_json = "1"
serde = {version = "1", features = ["derive"]}
thiserror = "1"
better-panic = "0.2"
dotenv = "0.15"
clap = "2"
shrinkwraprs = "0.3"
once_cell = "1"
secrecy = {version = "0.7.0", features = ["serde"]}
serde_plain = "0.3"
reqwest = {version = "0.11", features = ["json", "rustls-tls"]}
validator = { version = "0.12", features = ["derive", "unic"] }
argon2 = {version = "0.2", features = ["std"]}
rand = {version = "0.8"}
parking_lot = "0.11"
unicase = "2.6"
tracing-log = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
jwt-simple = "0.10"
tracing-subscriber = { version = "0.2", features = ["parking_lot"] }
async-trait = "0.1"

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "json", "migrate", "chrono", "postgres"]